# Web_HW_14

./: .env.example  .gitignore  1.py  2.py  README.md  alembic.ini  docker-compose.yml  env  main.py  pyproject.toml  test.db
Fast_API/: test_unit_repository_contact.py  test_unit_repository_users.py
Fast_API/migrations/versions/: 47be3738627f_init.py  7d646c29b4a4_init.py  e50a1e19a8de_init.py
Fast_API/src/database/: db.py
Fast_API/src/repository/: contact.py  users.py
Fast_API/src/routes/: auth.py  contact.py  users.py
Fast_API/src/schemas/: contact.py  user.py
Fast_API/src/services/: auth.py  client_redis.py  email.py  limiter.py  redis.py
Fast_API/src/tests/: test_unit_repository_contact.py
docs/source/: conf.py  index.rst
lesson/task_1/: main.py
lesson/task_2/docs/: conf.py
lesson/task_3/: Test_fixture.py  Методи перевірки.py  Приклад_тестування.py
lesson/task_4/: test_ops.py
lesson/task_5/: async.py
lesson/task_6/: main.py  module.py  my_module.py
lesson/task_7/: main2.py  main3.py  main4.py  pex02.py
lesson/task_8/src/: main.py
migrations/: env.py
migrations/versions/: cf14d9414e2a_init.py
src/database/: db.py  models.py
src/repository/: contact.py  contacts.py  users.py
src/routes/: auth.py  contact.py  contacts.py  users.py
src/schemas/: email.py
src/services/: auth.py  email.py  limiter.py
templates/quotes/: base.html  index.html
templates/users/: signup.html
tests/: conftest.py  test_route_auth.py  test_route_contact.py  test_route_users.py  test_unit_repository_contact.py  test_unit_repository_users.py
(+17 files in other folders)
